--- a/styles.css
+++ b/styles.css
@@ -1,52 +1,143 @@
-p {
-  font-size: 24px;
+* {
+  margin: 0;
 }
 
-.click-button {
-  padding: 10px;
+nav {
+  background: #fc4445;
+  display: flex;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  justify-content: flex-end;
+  box-shadow: 0 2px 0 rgba(0, 0, 0, 0.3);
 }
 
-#this-button {
+a {
+  text-decoration: none;
+  color: white;
+  font-size: 2rem;
+  display: block;
+  padding: 2rem;
+}
+
+.nav-list {
+  display: flex;
+  list-style: none;
+}
+
+nav a:hover {
   color: blue;
 }
 
-.container {
-  margin: 10px; /* Margins refer to spacing outside the element */
-  padding: 20px; /* Paddings refers to spacing between the border and child elements */
-  background-color: aqua;
-  border-right: 3px solid blue;
-  border-bottom: 3px solid blue;
-  border-radius: 3px;
-  width: 80%; /* Giving widths a %, rather than a certain pixel value allows the element to be resized */
-}
-
-/* We can apply CSS selectors with rules */
-/* This applies to all the descendant of items with the container class container which are p*/
-.container p {
-  color: purple;
-}
-
-/* This applies to all the immediate children of items of class container that are p */
-.container > p {
-  color: red;
-}
-
-.flex-container {
+#name {
+  height: 100vh;
+  background: #3feee6;
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   width: 100%;
-  background: orange;
-  border: 3px solid red;
-  flex-wrap: wrap;
+  left: 0;
+  padding: 0;
+  font-size: 3rem;
+  color: black;
+  font-family: serif;
+  box-shadow: 0 -1px 0 rgba(0, 0, 0, 0.3);
 }
 
-.flex-container div {
-  flex: 1;
-  min-width: 400px;
+#about-me{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #97caef;
+  padding: 5% 0;
+  box-shadow: 0 -1px 0 rgba(0, 0, 0, 0.3);
 }
 
-.grid-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
-  background: salmon;
-  border: 3px solid brown;
+.about-me-section {
+  text-align: justify;
+  margin: 3% 5% 5% 5%;
+  font-size: 1.5rem;
+}
+
+h2 {
+  font-size: 5rem;
+}
+
+h3 {
+  font-size: 2rem;
+  padding-top: 4%;
+}
+
+#projects {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: #55bcc9;
+  padding-bottom: 10%;
+  box-shadow: 0 -1px 0 rgba(0, 0, 0, 0.3);
+}
+
+.projects-grid {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.project-tile {
+  width: 300px;
+  height: 300px;
+	float: left;
+	margin: 1.66%;
+	border-radius: 15%;
+  background-color: #cafafe;
+  font-size: 1.5rem;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  box-shadow: -5px 2px 0 rgba(1, 1, 1, 0.4);
+}
+
+#projects p {
+  margin: 0 5%;
+}
+
+#contact-me {
+  background: #cafafe;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+}
+.socials {
+  width: 50%;
+}
+
+.socials a{
+  color: black;
+  float: left;
+  background-color: #abdede;
+  border-radius: 20%;
+  margin: 3%;
+  padding: 10px;
+  box-shadow: -1px 2px 0 rgba( 0, 0, 0, 0.4);
+}
+
+.socials a:hover{
+  box-shadow: none;
+}
+
+footer {
+  background: #fc4445;
+  height: 10vh;
+  width: 100%;
+  color: white;
+  float: right;
+  align-items: center;
+}
+
+footer p {
+  padding: 2%;
 }
