--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ nav a:hover {
 
 #name {
   height: 100vh;
-  background: #3feee6;
+  background-image: linear-gradient(62deg, #3fee60 0%, #181719 90%);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -50,7 +50,7 @@ nav a:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #97caef;
+  background: #97caef;
   padding: 5% 0;
   box-shadow: 0 -1px 0 rgba(0, 0, 0, 0.3);
 }
@@ -93,7 +93,7 @@ h3 {
 	float: left;
 	margin: 1.66%;
 	border-radius: 15%;
-  background-color: #cafafe;
+  background-image: linear-gradient(10deg, #cafafe 0%, #97caef 90%);
   font-size: 1.5rem;
   justify-content: center;
   display: flex;
@@ -108,11 +108,11 @@ h3 {
 }
 
 #contact-me {
-  background: #cafafe;
   align-items: center;
   display: flex;
   flex-direction: column;
   height: 20%;
+  background-image: linear-gradient(62deg, #3a3d40 50%, #181719 150%);
 }
 .socials {
   width: 50%;
