--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ nav {
   left: 0;
   justify-content: flex-end;
   box-shadow: 0 2px 0 rgba(0, 0, 0, 0.3);
+  height: 15%;
 }
 
 a {
@@ -25,6 +26,12 @@ a {
   display: block;
   padding: 2rem;
   text-shadow: -2px 3px 0 rgb(30, 27, 27);
+  transition: font-size 1s;
+}
+
+a:hover {
+  color: #9f9f9f;
+  font-size: 2.3rem;
 }
 
 .nav-list {
@@ -132,7 +139,8 @@ h3 {
   align-items: center;
   display: flex;
   flex-direction: column;
-  height: 20%;
+  height: 30%;
+  padding-bottom: 10%;
 }
 .socials {
   width: 50%;
