Changed contacts section contrasts

--- a/styles.css
+++ b/styles.css
@@ -155,11 +155,11 @@ h3 {
 }
 
 .socials a{
-  color: #4a4444;
+  color: #ffffff;
   float: left;
   margin: 3%;
   padding: 10px;
-  text-shadow: -2px 3px 0 rgba(0, 0, 0, 0.4);
+  text-shadow: -10px 10px 4px rgba(0, 0, 0, 0.4);
 }
 
 .socials a:hover{
