--- a/styles.css
+++ b/styles.css
@@ -21,11 +21,11 @@ nav {
 
 a {
   text-decoration: none;
-  color: #6f6f6f;
+  color: #ffffff;
   font-size: 2rem;
   display: block;
   padding: 2rem;
-  text-shadow: -2px 3px 0 rgb(30, 27, 27);
+  text-shadow: -10px 10px 4px rgba(0, 0, 0, 0.4);
   transition: font-size 1s;
 }
 
